--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"http://maksimkt.github.io/react-project-shop",
+  "homepage": "http://maksimkt.github.io/react-project-shop",
   "name": "react-project-shop",
   "version": "0.1.0",
   "private": true,
@@ -7,8 +7,12 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.1",
     "@testing-library/user-event": "^12.2.2",
+    "classnames": "^2.2.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-modal": "^3.12.1",
+    "react-reveal": "^1.2.2",
+    "react-router": "^5.2.0",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
   },
