--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-modal": "^3.12.1",
+    "react-phone-number-input": "^3.1.6",
     "react-redux": "^7.2.2",
     "react-reveal": "^1.2.2",
     "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
@@ -54,5 +56,9 @@
   },
   "devDependencies": {
     "gh-pages": "^3.1.0"
+  },
+  "engines": {
+    "node": "12.4.0",
+    "npm": "6.9.0"
   }
 }
